Fix JavaFX dependencies for all platforms
- Add all required JavaFX modules (base, controls, fxml, graphics, swing)
- Add platform-specific profiles for Linux, Windows, and Mac with native classifiers
- Update javafx.version to 21.0.2
- Add maven-dependency-plugin to copy dependencies to lib folder
- Update README with better running instructions

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>